--- a/api/resume/models/resume.settings.json
+++ b/api/resume/models/resume.settings.json
@@ -2,7 +2,8 @@
   "kind": "singleType",
   "collectionName": "resumes",
   "info": {
-    "name": "resume"
+    "name": "resume",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -28,6 +29,31 @@
       "plugin": "upload",
       "required": true,
       "pluginOptions": {}
+    },
+    "position": {
+      "type": "string",
+      "required": true
+    },
+    "description": {
+      "type": "text"
+    },
+    "skills": {
+      "type": "richtext"
+    },
+    "workExperience": {
+      "type": "richtext"
+    },
+    "study": {
+      "type": "richtext"
+    },
+    "objective": {
+      "type": "richtext"
+    },
+    "additional": {
+      "type": "text"
+    },
+    "contact": {
+      "type": "richtext"
     }
   }
 }
