create component contactType and include resume collection

--- a/api/conference-booking/models/conference-booking.settings.json
+++ b/api/conference-booking/models/conference-booking.settings.json
@@ -36,6 +36,11 @@
     "users_permissions_user": {
       "plugin": "users-permissions",
       "model": "user"
+    },
+    "contact": {
+      "type": "component",
+      "repeatable": true,
+      "component": "contact-type.contact-list"
     }
   }
 }
