fix location with component contact

--- a/api/resume/models/resume.settings.json
+++ b/api/resume/models/resume.settings.json
@@ -53,7 +53,9 @@
       "type": "text"
     },
     "contact": {
-      "type": "richtext"
+      "type": "component",
+      "repeatable": true,
+      "component": "contact-type.contact-list"
     }
   }
 }
