--- a/api/resume/models/resume.settings.json
+++ b/api/resume/models/resume.settings.json
@@ -42,6 +42,16 @@
       "type": "component",
       "repeatable": true,
       "component": "skills-list.skills-list"
+    },
+    "avatar": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images"
+      ],
+      "plugin": "upload",
+      "required": false,
+      "pluginOptions": {}
     }
   }
 }
